--- a/chapter1.tex
+++ b/chapter1.tex
@@ -284,14 +284,14 @@ This is evident from Fig. 2, which shows the resonance spectrum $F( \nu )$, calc
 motions of 12 largest, fast spinning, objects of the system (with the mean diameters $\geq 500$ km and
 periods < 2 days: six planets, three asteroids and three satellites, leaving apart trans-neptunian
 objects; see Kotov, 2018). The peak of the best commensurability corresponds to a period of
-9594(65) s, which coincides well, within the error limits, with $t_K$ at about $5.3 \tetha$ C.L., i.e. with a
+9594(65) s, which coincides well, within the error limits, with $t_K$ at about $5.3 \theta$ C.L., i.e. with a
 chance probability $10^{-7}$ .
 It seems very puzzling also that the spatial scale $t_{K} \approx 19.24 A.U.$ occurs to be the best
 commensurate with orbital sizes of the main planetary orbits of the solar system, - see Fig. 3,
 where the resonance spectrum $F( \nu )$ is plotted for 11 orbits, including those of asteroid belt, Pluto
 and Eris (orbital «diameters» were approximated by the major axes, and for the inner orbits they
 were multiplied by $\pi$). The primary peak - of the best commensurability - corresponds to the
-spatial scale 9600(120) light sec., or 19.24(3) A.U., at $4.7 \tetha$ C.L. (Kotov, 2013)
+spatial scale 9600(120) light sec., or 19.24(3) A.U., at $4.7 \theta$ C.L. (Kotov, 2013)
 Close binaries are characterized by the $t_{\Theta}$ resonance too, with the $\pi$ number as a factor of ideal
 incommensurability of motions, or frequencies (Kotov, 2018). Fig. 4 shows the resonance spectrum,
 or metrics of motion, $F_{1} (\nu) \equiv F(\pi \cdot \nu/2)$, computed for 5746 close binaries, including cataclysmic
@@ -300,13 +300,13 @@ variables and related objects. The major peak, with C.L. of about $7 \tetha$, co
 binary stars catalogues and original papers).
 To compute the $F_{1} (\nu)$ spectrum, the program finds - for each test frequency $\nu$ - deviations of
 ratios $(2\nu_{i} /\pi \nu) k \geq 1$ from the nearest integers, and determines then the least-square minimum of such
-deviations. Here $\nu$ is the test frequency, $ν_{i}$ minus the frequency of a given object, i = 1, 2, ...N – the
+deviations. Here $\nu$ is the test frequency, $\nu_{i}$ minus the frequency of a given object, i = 1, 2, ...N – the
 ordinal number, with N, the total number of observed periods in a sample of objects, and the power
 k = 1 or –1. The factor of two in Eq. (2) takes into account that second half of the orbit repeats the
 first one, and the transcendental number π appears as a factor of orbital stability, or «ideal»
 incommensurability, of motions, or frequencies (the $\pi$ number, in fact, characterizes geometry of
 space; for details see Kotov, 2018).
-Recently it was shown, that the $t_{\Tetha}$ timescale characterizes, statistically, the motion of superfast
+Recently it was shown, that the $t_{\Theta}$ timescale characterizes, statistically, the motion of superfast
 exoplanets too, see Figure 5.
 It was shown in fact, that a number of superfast, with periods < 2 days, exoplanets revolve
 around parent stars with periods, near-commensurate with timescales $t_{1}$ and/or $2 t_{1}/\pi$, where $t_{1} =
@@ -326,7 +326,7 @@ shows a $3\tetha$ C.L., and the primary peak yields to the best-commensurable pe
 \begin{figure}
 \centering
 \includegraphics[width=0.5\textwidth]{./figures/figure}
-\caption{Same as Fig. 2, for N = 11 sizes («diameters») of the solar system (with c = 1 and the π
+\caption{Same as Fig. 2, for N = 11 sizes («diameters») of the solar system (with c = 1 and the $\pi$
 factor for inner orbits). The highest peak corresponds to the spatial scale 9600(120) light sec.}
 \label{fig:figure_label}
 \end{figure}
@@ -334,7 +334,7 @@ factor for inner orbits). The highest peak corresponds to the spatial scale 9600
 \begin{figure}
 \centering
 \includegraphics[width=0.5\textwidth]{./figures/figure}
-\caption{Resonance-spectrum F 1 (ν), computed for N = 5746 binaries with periods < 5 days.
+\caption{Resonance-spectrum $F_{1} ( \nu)$, computed for N = 5746 binaries with periods < 5 days.
 Horizontal axis gives logarithm of the trial frequency ν (in μHz), the dashed line indicates a 3σ
 C.L., and the major peak corresponds to a timescale of 9590(70) s.}
 \label{fig:figure_label}
@@ -343,7 +343,7 @@ C.L., and the major peak corresponds to a timescale of 9590(70) s.}
 \begin{figure}
 \centering
 \includegraphics[width=0.5\textwidth]{./figures/figure}
-\caption{Same as Fig. 4, for the F 2 (ν) spectrum, computed for N = 145 exoplanets with P < 1.5
+\caption{Same as Fig. 4, for the $F_{2} ( \nu )$ spectrum, computed for N = 145 exoplanets with P < 1.5
 days. The strongest peak of the composite commensurability corresponds to a period of 9640(115) s
 at nearly 3.9σ significance (after Kotov, 2018).}
 \label{fig:figure_label}
