--- a/chapter1.tex
+++ b/chapter1.tex
@@ -295,15 +295,15 @@ spatial scale 9600(120) light sec., or 19.24(3) A.U., at $4.7 \theta$ C.L. (Koto
 Close binaries are characterized by the $t_{\Theta}$ resonance too, with the $\pi$ number as a factor of ideal
 incommensurability of motions, or frequencies (Kotov, 2018). Fig. 4 shows the resonance spectrum,
 or metrics of motion, $F_{1} (\nu) \equiv F(\pi \cdot \nu/2)$, computed for 5746 close binaries, including cataclysmic
-variables and related objects. The major peak, with C.L. of about $7 \tetha$, corresponds to the timescale
+variables and related objects. The major peak, with C.L. of about $7 \theta$, corresponds to the timescale
 9590(70) s, coinciding within the error limits with $t_{K}$ (the stellar data were taken from all available
 binary stars catalogues and original papers).
 To compute the $F_{1} (\nu)$ spectrum, the program finds - for each test frequency $\nu$ - deviations of
 ratios $(2\nu_{i} /\pi \nu) k \geq 1$ from the nearest integers, and determines then the least-square minimum of such
-deviations. Here $\nu$ is the test frequency, $\nu_{i}$ minus the frequency of a given object, i = 1, 2, ...N – the
+deviations. Here $\nu$ is the test frequency, $\nu_{i}$ minus the frequency of a given object, i = 1, 2, ...N - the
 ordinal number, with N, the total number of observed periods in a sample of objects, and the power
-k = 1 or –1. The factor of two in Eq. (2) takes into account that second half of the orbit repeats the
-first one, and the transcendental number π appears as a factor of orbital stability, or «ideal»
+k = 1 or -1. The factor of two in Eq. (2) takes into account that second half of the orbit repeats the
+first one, and the transcendental number $\pi$ appears as a factor of orbital stability, or «ideal»
 incommensurability, of motions, or frequencies (the $\pi$ number, in fact, characterizes geometry of
 space; for details see Kotov, 2018).
 Recently it was shown, that the $t_{\Theta}$ timescale characterizes, statistically, the motion of superfast
@@ -311,7 +311,7 @@ exoplanets too, see Figure 5.
 It was shown in fact, that a number of superfast, with periods < 2 days, exoplanets revolve
 around parent stars with periods, near-commensurate with timescales $t_{1}$ and/or $2 t_{1}/\pi$, where $t_{1} =
 9603(85) s$ agrees fairly well with the period $t_{K} \approx 9600$ s of the so-called «cosmic oscillation», found
-firstly in the Sun, then – in other variable objects of the Universe (the probability that the two
+firstly in the Sun, then - in other variable objects of the Universe (the probability that the two
 timescales would coincide by chance is near $3 \cdot 10^{-4}$).
 
 \begin{figure}
@@ -319,7 +319,7 @@ timescales would coincide by chance is near $3 \cdot 10^{-4}$).
 \includegraphics[width=0.5\textwidth]{./figures/figure}
 \caption{Resonance-spectrum F(ν) computed for 15 motions of the largest, fast-spinning bodies of
 the solar system. On horizontal axis is logarithm of $frequency \nu in \muHz$, the dashed horizontal line
-shows a $3\tetha$ C.L., and the primary peak yields to the best-commensurable period 9594(65) s.}
+shows a $3\theta$ C.L., and the primary peak yields to the best-commensurable period 9594(65) s.}
 \label{fig:figure_label}
 \end{figure}
 
@@ -335,7 +335,7 @@ factor for inner orbits). The highest peak corresponds to the spatial scale 9600
 \centering
 \includegraphics[width=0.5\textwidth]{./figures/figure}
 \caption{Resonance-spectrum $F_{1} ( \nu)$, computed for N = 5746 binaries with periods < 5 days.
-Horizontal axis gives logarithm of the trial frequency ν (in μHz), the dashed line indicates a 3σ
+Horizontal axis gives logarithm of the trial frequency ν (in μHz), the dashed line indicates a $3 \theta$
 C.L., and the major peak corresponds to a timescale of 9590(70) s.}
 \label{fig:figure_label}
 \end{figure}
@@ -345,7 +345,7 @@ C.L., and the major peak corresponds to a timescale of 9590(70) s.}
 \includegraphics[width=0.5\textwidth]{./figures/figure}
 \caption{Same as Fig. 4, for the $F_{2} ( \nu )$ spectrum, computed for N = 145 exoplanets with P < 1.5
 days. The strongest peak of the composite commensurability corresponds to a period of 9640(115) s
-at nearly 3.9σ significance (after Kotov, 2018).}
+at nearly $3.9\theta$ significance (after Kotov, 2018).}
 \label{fig:figure_label}
 \end{figure}
 
@@ -376,7 +376,7 @@ holographic sphere representing the Grandcosmos, and the square of $ln(R/\lambda
 $$ln 2 (M\prime/m_{e} ) + ln 2 (R/\lambdabar_{e}) + ln 2 (t/t_{e} ) \approx ln 2 (R_{GC} /\lambdabar_{e} )$$
 more precisely, to $10^{-8}$ , corresponding to $10{-7}$ precision on the above G value:
 $$ln(\sqrt{(ln 2 (M\prime/m_{e} )} + ln 2 (R/\lambdabar_{e} ) + ln 2 (t/t_{e} ))) \approx 2e - 1/2a$$
-This is a dramatic geometrical confirmation for the visible Universe – Grandcosmos holographic
+This is a dramatic geometrical confirmation for the visible Universe - Grandcosmos holographic
 couple.
 Another crucial point in Physics is the existence of invariant fundamental constants. Thus,
 association of three of them must give characteristic values of M, L, T. So, approaching a domain in
@@ -398,7 +398,7 @@ $$l (\hbar,G,m) = \hbar 2 /Gm^{3} \approx R/2$$
 but it took 9 years to get this published [12], and it appeared later [3] that m must be considered more precisely as the cubic root of the product $m_{e} \cdot m_{p} \cdot m_{H}$ . Moreover, the above critical condition
 links the time $t = frac{R}{c}$ and the mean mass density by the c-free formula $$\rho_{c} = 3/8\pi Gt^{2} \approx 9.41198 \times
 10^{-27} kg m^{-3}$$ , So the mainstream idea of a temporal variability of the mean density $\rho_{c}$ cannot be to
-sustain, meaning that ρ c must be considered as a fundamental constant. This writes:
+sustain, meaning that $\rho_{c}$ must be considered as a fundamental constant. This writes:
 $$t{\hbar,\rho_{c} ,G} = 1/\rho_{c}^{1/2} G^{1/2} = (R/c) (8\pi/3)^{1/2}$$
 This idea of $\rho_{c}$ being a fundamental constant permits to define R without any ambiguity: the
 radius containing a critical mass. This means each point is the center of an equivalent black hole,
@@ -410,7 +410,7 @@ Indeed, even General Relativity in unable to define what is a Galilean frame, wh
 pendulus shows it directly, realizing the Cosmic Microwave Background frame, identified with the
 Grandcosmos frame, as seen above.
 Introducing the Fermi constant $G_{F}$ , the associated c-free length is very particular, to $1.7\%$:
-$$l{\hbar,\rho_{c},G_{F}} = \hbar/ρ_{c}^{1/2} G_{F}^{1/2} \approx 9.07154 10^{9} m \approx \lambdabar_{e}^{2}/l_{P}$$
+$$l{\hbar,\rho_{c},G_{F}} = \hbar/\rho_{c}^{1/2} G_{F}^{1/2} \approx 9.07154 10^{9} m \approx \lambdabar_{e}^{2}/l_{P}$$
 Now, the following mandatory c-free times are close each over to $0.7\%$:
 $$T{\hbar,\rho_{c} ,G_{F} } = \hbar^{4} /ρ_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s$$
 $$T\prime{\hbar,G,m} = \hbar^{3} /G^{2} m^{5} \approx 5.5224 \times 10^{57} s$$
