--- a/chapter2.tex
+++ b/chapter2.tex
@@ -11,7 +11,7 @@
 The pertinence of our above simple polynomial relations are not admitted by the standard
 community, for instance arguing that since the proton is composite, its mass cannot enter simple
 relations. The same argument is presented for the theoretical dependence of the electric constant a
-with other constants g and g\prime, or with the energy level. These are reductionist arguments, unable toexplain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences.
+with other constants g and $g\prime$, or with the energy level. These are reductionist arguments, unable toexplain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences.
 By contrast, the holistic approach implies immergences from a comprehension of the Cosmos. It is a
 pity that this term `immergence` is a neologism.
 The Eddington's proposal for a was the whole number 137, which intrigued some physicists for a
@@ -20,13 +20,13 @@ Singular Prime in the series of the maximal primes appearing in the numerator of
 series: 3,11,5,137,7,11, showing a symmetry between the 11 supergravity dimensions and the 4 of
 space-time. Indeed:
 $$137 = 11^{2} + 4^{2}$$
-$$\frac{11}{4} = ( \lambda_CNB /\lambda_CMB )^{3}$$
+$$\frac{11}{4} = (\lambda_CNB /\lambda_CMB )^{3}$$
 Since Riemann series are tied to the prime number distribution, it is strange that mathematicians
 have not point out the primes appearing in the Harmonic series, since it is the single pole. It seems
-that the basic precept 'all occurs in the pole' was forgotten in this case. As ancient Egyptian used
-only fractions of type 1/n, they were certainly aware of this particular harmonic series $s_{5} = \frac{137}{60}$.
-Indeed in appears in the Ptolemaic approximation for π: $$\frac{377}{120} = 2 + s_{5}/2$$.
-Recall that the electrical constant a characterizes the force $\hbar c/al2$ between two l - distant
+that the basic precept `all occurs in the pole` was forgotten in this case. As ancient Egyptian used
+only fractions of type $\frac{1}{n}$, they were certainly aware of this particular harmonic series $s_{5} = \frac{137}{60}$.
+Indeed in appears in the Ptolemaic approximation for $\pi$: $$\frac{377}{120} = 2 + s_{5}/2$$.
+Recall that the electrical constant a characterizes the force $\frac{\hbar c}{al^{2}}$ between two l - distant
 elementary charges, appearing central in Atomic Physics and in many fine-tuning relations [1]. It is
 misleading that physicists focused on only one property, the appearance of its fifth power in the
 Hydrogen hyper-fine spectra, and call its inverse the `fine-structure constant`. It is strange also that
@@ -35,9 +35,9 @@ following shows that 137 plays a central role in fine-tuning analysis. One may i
 the sum of the numbers of dimensions in the Topological Axis [3], taking into account the double
 point for the superstring value n = 10, and the remarkable sum:
 $$\sum{k=7}{k=0}(2 + 4 k ) = 2^{7}$$
-So $137 = 2^{7} – 1 + 3 + 7$, the Hierarchic Combination form. But this appears also as 137 = 135 + 2,
-with the dimension 2 of the String patent. In particular, one obtains the value a \approx 137.035999119
-compatible with measurement a ≈ 137.035999139(31) in:
+So $137 = 2^{7} - 1 + 3 + 7$, the Hierarchic Combination form. But this appears also as 137 = 135 + 2,
+with the dimension 2 of the String patent. In particular, one obtains the value $a \approx 137.035999119$
+compatible with measurement $a \approx 137.035999139(31)$ in:
 $ln137/ln(a/137) \approx (2+135/d_{e})^{2}$
 meaning the ratio a/137 acts as a canonical ratio.
 
@@ -49,7 +49,7 @@ prime, by $T^{2} = L^{3} = n^{6}$ , meaning the classical 6D space of classical 
 the usual 3D space, but attribute 2 dimensions for the Time, in conformity with an independent
 study [18].
 This is the degenerate arithmetic form of the spatio-temporal holographic principle, It is also the
-3^{rd} Kepler law, but its diophantine form gives $L = n^{2}$ , the orbit law in the Hydrogen atom and in our
+3rd Kepler law, but its diophantine form gives $L = n^{2}$ , the orbit law in the Hydrogen atom and in our
 Gravitational Molecule model, where the visible Universe corresponds to the first orbital,
 suggesting the existence of a Grandcosmos, as the Topological Axis does also, which favors the
 dimension n = 30, the natural extension of the above :
@@ -59,8 +59,8 @@ Principle, concerning also the quantum vacuum, would involve a term $F^{7}$ , an
 \section {The Information Conservation}
 
 The Grandcosmos holographic reduction radius R' shows itself an overwhelming holographic
-relation with the CMB Wien wavelength $l_CMB$ , to $0.01\%$:
-$$4\pi(R\prime/l_{CMB} )^{2} ≈ e^{a}$$
+relation with the CMB Wien wavelength $l_{CMB}$ , to $0.01\%$:
+$$4\pi(R\prime/l_{CMB})^{2} \approx e^{a}$$
 Since the holographic technique uses coherent radiation, this seems incompatible with the CMB
 thermal character. But in a totally deterministic cosmos, there is no paradox. This question is
 connected with the black hole information paradox [20]. Independently of our approach, an
@@ -75,28 +75,26 @@ relations would be only Fourier transform manifestations of Wave Mechanics.
 
 \section {Omnipresence of a^a}
 
-The famous Lucas-Lehmer primality test uses the series of whole numbers $N_{n+1} = N_{n}^{2} – 2$,
-starting from $N = 4 = u_{3} + 1/u_{3}$ , with $u_{3} = \sqrt{3} + 2$, belonging to the Diophantine generators $u_{n} = \sqrt{n} +
-\sqrt{(n+1)}$., whose entire powers are close to whole numbers. One shows that $N_{n} \approx u_{3}^{(2^{q})}$, and for q
-= 9:
+The famous Lucas-Lehmer primality test uses the series of whole numbers $N_{n+1} = N_{n}^{2} - 2$,
+starting from $N = 4 = u_{3} + 1/u_{3}$ , with $u_{3} = \sqrt{3} + 2$, belonging to the Diophantine generators $u_{n} = \sqrt{n} + \sqrt{(n+1)}$., whose entire powers are close to whole numbers. One shows that $N_{n} \approx u_{3}^{(2^{q})}$, and for q = 9:
 $u_{3}^(2^9) \approx (2(a2 + 2sqrt{\mu}))^{64} \approx a^{a}$
 defining a to 39 ppm, where μ is the mass ratio muon/electron and the main term $2a^{2} = m_{e} c^{2}/E_{Ryd}$ is
 tied to the Rydbergh energy's principal value $E_{Ryd}$ whose ratio with the Planck energy is closely
 related to the Monster group cardinal order, to 1.5 ppm:
-$$O_{M} e^{-1/2a} \approx (E P /E_{Ryd})^{2} = \hbar Gc 5 /E_{Ryd}^2$$
-Indeed, by respect to the Chronon $\lambdabar_M /c \approx t_0 = 1.1333 \times 10{-104} s$, the number ot quantum events in
-the above Supercycle period T/ t_0 shows, with δ = R'/R, to 0.4{percent}, 2{percent} and 0.6\%:
-$$\delta \times T/t_{0} \approx (e^{e} )^{137} \approx O_{M}^{3} \approx 496^{60}$$
-implying a liaison between O_{M} , 137 and the famous String dimension 496, tied to the Higgs Boson
+$$O_{M} e^{-1/2a} \approx (E_{P} /E_{Ryd})^{2} = \frac{\hbar Gc^{5}}{E_{Ryd}^2}$$
+Indeed, by respect to the Chronon $\lambdabar_M /c \approx t_{\Theta} = 1.1333 \times 10{-104} s$, the number ot quantum events in
+the above Supercycle period $T/ t_{\Theta}$ shows, with $\delta = R\prime/R$, to 0.4\%, 2\% and 0.6\%:
+$$\delta \times T/t_{\Theta} \approx (e^{e} )^{137} \approx O_{M}^{3} \approx 496^{60}$$
+implying a liaison between $O_{M}$ , 137 and the famous String dimension 496, tied to the Higgs Boson
 (see Fig.1). Note the following combination of the three dimensionless parameters, the electrical
-one a, the Fermi ratio $F =\sqrt{a_{w}}$ and the Bizouard strong ratio f \approx 8.4345:
-F/af \approx 496
+one a, the Fermi ratio $F =\sqrt{a_{w}}$ and the Bizouard strong ratio $f \approx 8.4345$:
+$$F/af \approx 496$$
 Also, to 8 ppm: $lnO_{M} /2lnlnlnlnO_{M} \approx 137$, and the product of the 20 groups of the happy family tied
 to the Monster shows, to 0.015\%:
 $\Pi_{happy} \approx \delta \times a^{a}$. Also, with the Pell-Fermat generator $u_{1} = 1 + \sqrt{2}$:
 $a^{a} \approx u 1^(3\times(2^{8} - 1))$
-defining a to 0.3 ppm. So the number a a establishes a connexion between u 1 and u 3 , two of the
+defining a to 0.3 ppm. So the number a a establishes a connexion between $u_{1}$ and $u_{3}$ , two of the
 simplest arithmetics generators. Moreover a a has been connected [3] to the canonical $e^{1/e}$ and the
-5{th} optimal musical scale with 306 notes. This opens a new research in pure mathematics.
+5th optimal musical scale with 306 notes. This opens a new research in pure mathematics.
 
 
