--- a/chapter2.tex
+++ b/chapter2.tex
@@ -73,7 +73,7 @@ Time, specially the non-locality phenomena, they agree for complete determinism,
 Copenhagen statistical interpretation. The hidden variables exist really: the Cosmos ! Heisenberg
 relations would be only Fourier transform manifestations of Wave Mechanics.
 
-\section {Omnipresence of a^a}
+\section {Omnipresence of $a^{a}$}
 
 The famous Lucas-Lehmer primality test uses the series of whole numbers $N_{n+1} = N_{n}^{2} - 2$,
 starting from $N = 4 = u_{3} + 1/u_{3}$ , with $u_{3} = \sqrt{3} + 2$, belonging to the Diophantine generators $u_{n} = \sqrt{n} + \sqrt{(n+1)}$., whose entire powers are close to whole numbers. One shows that $N_{n} \approx u_{3}^{(2^{q})}$, and for q = 9:
