--- a/chapter1.tex
+++ b/chapter1.tex
@@ -318,8 +318,8 @@ timescales would coincide by chance is near $3 \cdot 10^{-4}$).
 \centering
 \includegraphics[width=0.5\textwidth]{./figures/figure}
 \caption{Resonance-spectrum F(ν) computed for 15 motions of the largest, fast-spinning bodies of
-the solar system. On horizontal axis is logarithm of frequency $\nu$ in $\muHz$, the dashed horizontal line
-shows a $3 \theta $ C.L., and the primary peak yields to the best-commensurable period 9594(65) s.}
+the solar system. On horizontal axis is logarithm of frequency $\nu$ in $\mu$Hz, the dashed horizontal line
+shows a $ 3 \theta $ C.L., and the primary peak yields to the best - commensurable period 9594(65) s.}
 \label{fig:figure_label}
 \end{figure}
 
