--- a/chapter1.tex
+++ b/chapter1.tex
@@ -412,7 +412,7 @@ Grandcosmos frame, as seen above.
 Introducing the Fermi constant $G_{F}$ , the associated c-free length is very particular, to $1.7\%$:
 $$l{\hbar,\rho_{c},G_{F}} = \hbar/\rho_{c}^{1/2} G_{F}^{1/2} \approx 9.07154 10^{9} m \approx \lambdabar_{e}^{2}/l_{P}$$
 Now, the following mandatory c-free times are close each over to $0.7\%$:
-$$T{\hbar,\rho_{c} ,G_{F} } = \hbar^{4} /ρ_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s$$
+$$T{\hbar,\rho_{c} ,G_{F} } = \hbar^{4} /\rho_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s$$
 $$T\prime{\hbar,G,m} = \hbar^{3} /G^{2} m^{5} \approx 5.5224 \times 10^{57} s$$
 This would be the periodic time of a Cycling Cosmos, which corresponds in the Topological Axis to
 the holic dimension (see below) n = 30, to 4\%. Comparing T with the Kotov Non-Doppler Cosmic
