--- a/introduction.tex
+++ b/introduction.tex
@@ -8,7 +8,7 @@
 Deterministic Computation and Hierarchy Principle:
 \begin{center}
 It was observed that the physical constants are tightly contrived, but only three dimensionless
-parameters: a, p, and a G, are sufficient to explain the main structures of the world [1]. Two of them
+parameters: a, p, and $a_{G}$, are sufficient to explain the main structures of the world [1]. Two of them
 are precisely measured: the electric constant $a = 137.035999139(31)$, measured with 0.23 ppb
 precision and the proton-electron mass ration $p = 1836.15267245(75)$, known with 0.41 ppb
 precision. By contrast, the gravitational coupling constant a G was neither well defined nor
