--- a/abstract.tex
+++ b/abstract.tex
@@ -9,12 +9,12 @@ dramatic progress in computer software. The three type of mathematical constants
 considered: Large, Intermediate and close to unity. The famous Large Number problem is
 resolved by Eddington's statistical theory and the gravitational Hydrogen Molecule model,
 leading to the visible Universe horizon radius $ R = 13.812 Gly $. The extension of
-the double cosmic correlation defines a Topological Axis using Euler-Neper constant e as
+the double cosmic correlation defines a Topological Axis using Euler-Napier constant e as
 primary basis, confirming String Theory, Cartan-Bott periodicity and the 30 holic
 dimensions corresponding to the simplest physical diophantine equation $T^2 = L^3 = M^5 =
 N^{30}$ . The point $n = 30$ corresponds to the common time, about $10^{58} s$, given by two
 mandatory dimensional analysis, interpreted as the Supercycle period. The visible Universe
-wavelength `Topon` $2G \cdot \hbar / Rc^3 = 4 \cdot 10^{-96} m$ corresponds to $n = 2e^e$ and enters the 1D mono-
+wavelength `Topon` $2G \cdot \hbar / Rc^{3} = 4 \cdot 10^{-96} m$ corresponds to $n = 2e^{e}$ and enters the 1D mono-
 radial holographic extension of the Bekenstein-Hawking Universe entropy, implying the
 critical condition, and breaking the Planck wall by a factor $10^{61}$ . The monochrome
 holographic extension leads to a Grandcosmos, larger than the visible Universe by the
@@ -22,7 +22,7 @@ same factor $10^{61}$ . This implies a tachyonic speed in the same ratio by resp
 the Planck renormalisation of the Vacuum Energy, independently checked by the Casimir
 effect. The couple Universe-Grandcosmos is confirmed by a dramatic geo-dimensional
 analysis, where Length, Time and Mass are considered as unit vectors in a 3D Super-space.
-A mater-antimater $ 10^104 Hz$ Oscillatory Bounce unifies standard Single Bang with steady-
+A matter-antimatter $ 10^{104} Hz$ Oscillatory Bounce unifies standard Single Bang with steady-
 state cosmology, but suppress Relativity in cosmology, reestablishing the Newton Absolute
 Space-Time realized by the Microwave Cosmic Radiation. This new space-time structure are
 tied to unexplained phenomena such as Kotov cycle, Tifft periodicity, Pioneer anomaly and
