--- a/chapter5.tex
+++ b/chapter5.tex
@@ -4,12 +4,12 @@
 The application of the old direct scientific method, looking for fine tuning between physical
 parameters leads to a return to the Perfect Cosmological Principle implying a Steady-state Cosmos,
 confirmed by holographic quanto-cosmic relations. The Relativity theory is a local one and do not
-apply in Cosmology: the Absolute Space-time is reestablished, realized by the Microwave Cosmic
+apply in Cosmology: the Absolute Space-time is re-established, realized by the Microwave Cosmic
 Background, which identifies with the Grandcosmos Absolute Frame.
-The standard Holographic Principle must be generalized to unities others than the Planck length,
+The standard Holographic Principle must be generalized to units others than the Planck length,
 even invoking the visible Universe wavelength in 1D holography, which breaks another taboo of
 current thinking: the Planck wall, by an enormous factor, about $10^{61}$ resolving the vacuum energy
-dilemma factor $10^{122}$ .
+dilemna factor by $10^{122}$ .
 The multiple connexions with the DNA chain seems to imply it is a 1D hologram. This seems to
 be confirmed by recent studies [30].
 The simplest method of looking for simple monomial expressions involving mathematical
@@ -50,7 +50,7 @@ degenerate form of topological or holographic relations, the simplest diophantin
 Holic Principle, shows direct pertinence. In particular it emphatizes the 30 dimensions, which
 appear decisive in the Topological Axis.
 The simplest proof of the computation basis character of the electrical parameter a is provided
-by the multiple appearance of the terms $e^a$ and $a^a$ . The later is of order $e^{p/e}$ , while $e^{1/e}$ is decisive for
+by the multiple appearance of the terms $e^{a}$ and $a^{a}$ . The later is of order $e^{p/e}$ , while $e^{1/e}$ is decisive for
 the operational definition of e. The fact that a a appears also in the fifth Optimal (305 notes) Musical
 Scale indicates a liaison with Arithmetics.
 Now, the deep significance of a number of dimensions is the number of independent variables,
@@ -68,7 +68,7 @@ multiverse, will not save the already refuted standard evolutionary model.
 It is now clear that present mathematics are incomplete, and this article announces a
 Reunification of Philosophy, Mathematics, Physics, Informatics and Theoretical Biology.
 Acknowledgements. The authors want to salute the memory of Sir Michael Atiyah for this message
-to one of us; 'While I appreciate your efforts in physics, please do not use my name in any way
-other than referencing a published paper'. We salute his modesty, but his introduction of the rather
+to one of us; `While I appreciate your efforts in physics, please do not use my name in any way
+other than referencing a published paper`. We salute his modesty, but his introduction of the rather
 unexpected Euler-Mascheroni constant in the fine-tuning research has considerably helped our task
 of proving the existence of a fundamental theory.
