--- a/chapter4.tex
+++ b/chapter4.tex
@@ -1,8 +1,8 @@
 
 \chapter{Discussion}
 
-This article have answered several main problems : 1. Unification Gravitation-Quantum Physics,
-by rehabilitating the forgotten Eddington's statistical theory, 2. The real signification of Quantum
+This article has answered several main problems : 1. Unification Gravitation-Quantum Physics,
+by rehabilitating the forgotten Eddington's statistical theory, 2. The real significance of Quantum
 Physics, by assuming Physics is based on Arithmetics, 3. The overall unification by showing that
 cosmology is the basis of all science, 4. The role of dimensionless parameters, by proving that they
 are optimal basis of computation tied with the Holographic Principle and its arithmetic form, the
