--- a/Thesis-main.tex
+++ b/Thesis-main.tex
@@ -56,7 +56,7 @@
 \makeatletter
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% User specified LaTeX commands.
-\usepackage{tauthesis}
+\usepackage{doc}
 \iftoggle{edit-mode}{
 \geometry{verbose,tmargin=2cm,bmargin=2cm,lmargin=2cm,rmargin=6cm,headheight=1cm,headsep=1cm,footskip=1cm, marginparwidth=5cm}
 }
@@ -68,15 +68,15 @@
 \titleformat{\chapter}[hang]{\Huge\bfseries}{\thechapter\hsp}{0pt}{\Huge\bfseries}
 
 \University{University of Paris 11}
-\Faculty{Faculty}
-\School{School}
+%\Faculty{Faculty}
+%\School{School}
 \Department {Department of Physics}
-\Title{\textbf{ \uppercase {<Evidence for a Steady-State, Holographic, Tachyonic and Super-Symmetric Cosmology>}}}
-\Degree{N/A}
-\Author{<Dr Francis M. Sanchez>}
+\Title{\textbf{ \uppercase {Evidence for a Steady-State, Holographic, Tachyonic and Super-Symmetric Cosmology}}}
+%\Degree{N/A}
+\Author{Dr Francis M. Sanchez, Dr Kotov, Dr C.Bizouard, Pr. M.Grosmann, Dr. R.Veysseyres, Dr. D.Weigel, N.Flawisky, D.Gayral. L.Gueroult}
 \Year{<April 2019>}
-\Supervisor{<N/A>}
-\SecondSupervisor{<N/A>}
+%\Supervisor{<N/A>}
+%\SecondSupervisor{<N/A>}
 
 \makeatother
 
