--- a/doc.sty
+++ b/doc.sty
@@ -406,7 +406,7 @@
 %\def\School#1{\gdef\@School{#1}}
 %\def\Faculty#1{\gdef\@Faculty{#1}}
 %\def\Department#1{\gdef\@Department{#1}} 
-%\def\Degreetext#1{\gdef\@Degreetext{#1}} 
+\def\Degreetext#1{\gdef\@Degreetext{#1}} 
   \Degreetext{Article submitted for publication\\%
     \@Degree}
     
