--- a/doc.sty
+++ b/doc.sty
@@ -413,14 +413,14 @@
 \def\Header#1{\gdef\@Header{#1}} 
   \Header{{\Large\textbf{\MakeUppercase{\@University}}}\\ %
   \@Faculty \\%
-%  \@School}
+  \@School}
 
-%\def\SupervisionText#1{\gdef\@SupervisionText{#1}}   
-%  \SupervisionText {{\small This research was carried out at \@University\\
-%      in the \@Department\\
-%      Faculty of Engineering\\
-%      under the supervision of \@Supervisor\\
-%      and \@SecondSupervisor\\}}
+\def\SupervisionText#1{\gdef\@SupervisionText{#1}}   
+  \SupervisionText {{\small This research was carried out at \@University\\
+      in the \@Department\\
+      Faculty of Engineering\\
+      under the supervision of \@Supervisor\\
+      and \@SecondSupervisor\\}}
     
     
 \newcount\@Signatures 
