--- a/Thesis-main.tex
+++ b/Thesis-main.tex
@@ -72,7 +72,7 @@
 %\School{School}
 %\Department {Department of Physics}
 \Title{\textbf{ \uppercase {Evidence for a Steady-State, Holographic, Tachyonic and Super-Symmetric Cosmology}}}
-\Degree{N/A}
+%\Degree{N/A}
 \Author{Dr Francis M. Sanchez, Dr Kotov, Dr C.Bizouard, Pr. M.Grosmann, Dr. R.Veysseyres, Dr. D.Weigel, N.Flawisky, D.Gayral. L.Gueroult}
 \Year{<April 2019>}
 %\Supervisor{<N/A>}
