--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,10 @@
+@inproceedings{fm1,
+author = {Sanchez, Francis and Kotov, Valery and Bizouard, Ch},
+year = {2019},
+month = {04},
+pages = {},
+title = {Evidence for a Steady-State, Holographic, Tachyonic and Super-Symmetric Cosmology}
+}
 @article{article,
 author = {Sanchez, Francis and Kotov, Valery and Bizouard, Ch},
 year = {2019},
