--- a/Thesis-main.tex
+++ b/Thesis-main.tex
@@ -56,7 +56,7 @@
 \makeatletter
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% User specified LaTeX commands.
-\usepackage{doc}
+\usepackage{tauthesis}
 \iftoggle{edit-mode}{
 \geometry{verbose,tmargin=2cm,bmargin=2cm,lmargin=2cm,rmargin=6cm,headheight=1cm,headsep=1cm,footskip=1cm, marginparwidth=5cm}
 }
