--- a/chapter2.tex
+++ b/chapter2.tex
@@ -20,7 +20,7 @@ Singular Prime in the series of the maximal primes appearing in the numerator of
 series: 3,11,5,137,7,11, showing a symmetry between the 11 supergravity dimensions and the 4 of
 space-time. Indeed:
 $$137 = 11^{2} + 4^{2}$$
-$$\frac{11}{4} = (\lambda_CNB /\lambda_CMB )^{3}$$
+$$\frac{11}{4} = (\frac{\lambda_CNB}{\lambda_CMB})^{3}$$
 Since Riemann series are tied to the prime number distribution, it is strange that mathematicians
 have not point out the primes appearing in the Harmonic series, since it is the single pole. It seems
 that the basic precept `all occurs in the pole` was forgotten in this case. As ancient Egyptian used
@@ -58,7 +58,7 @@ Principle, concerning also the quantum vacuum, would involve a term $F^{7}$ , an
 
 \section {The Information Conservation}
 
-The Grandcosmos holographic reduction radius R' shows itself an overwhelming holographic
+The Grandcosmos holographic reduction radius $R\prime$ shows itself an overwhelming holographic
 relation with the CMB Wien wavelength $l_{CMB}$ , to $0.01\%$:
 $$4\pi(R\prime/l_{CMB})^{2} \approx e^{a}$$
 Since the holographic technique uses coherent radiation, this seems incompatible with the CMB
