--- a/chapter3.tex
+++ b/chapter3.tex
@@ -5,8 +5,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{Fine-tuning with basic mathematical constants}
-
 Since some dimensionless physical parameters are very precisely measured, it is natural to look for
 relations with mathematical constants different from the optimal basis e, such as π and γ ≈
 0.577215665, the Euler-Mascheroni constant, which appears already in the above single-electron
@@ -14,11 +12,11 @@ cosmic radius and the Topological Axis.
 
 \section {The Wyler's approach}
 
-Armand Wyler singularized a value a W approaching a to 0.6 ppm and confirmed the pertinence
-of the Lenz approximation which plays a central role above: p 0 = 6π 5 approaching p to 18.824 ppm.
+Armand Wyler singularized a value $a_{W}$ approaching a to 0.6 ppm and confirmed the pertinence
+of the Lenz approximation which plays a central role above: $p_{0} = 6\pi^{5}$ approaching p to 18.824 ppm.
 A confirmation of a symmetry between a and 137 is the following relation involving H, the
 Hydrogen electron mass ratio, precise to 83 ppb:
-a/137 ≈ (6π 5 H) 1/2 /p
+$$a/137 ≈ (6\pi^{5} H)^{1/2} /p$$
 Note that the rejection of Wyler's work, due to a non-perfect formula for the p and a values, is a new
 manifestation of the general neglectance of the Hierarchy Principle.
 
@@ -26,106 +24,104 @@ manifestation of the general neglectance of the Hierarchy Principle.
 
 The above Lenz-Wyler formula has a geometrical interpretation: 6π 5 is the product area-
 volume of a square of radius π. Now, the value f{26} of the Topological Function for the String
-main dimension 26 shows, to 0.1{percent}, the same form f{26} ≈ 6(2π 2 a 3 ) 5 , where 2π 2 a 3 is the area of a
+main dimension 26 shows, to 0.1{percent}, the same form $f{26} \approx 6(2\pi^{2} a^{3} )^{5}$ , where 2π 2 a 3 is the area of a
 4-sphere of radius a. Moreover, with n/p the mass ratio Neutron/Proton, to 0/3{percent}, 0.02{percent} and 1
 ppm:
-$$(p/n) (R/\lambdabar_e )^2 ≈ (f{26}/6) 2 ≈ (2π 2 a 3 ) 10 ≈ π^{155}$$
+$$(p/n) (R/\lambdabar_e )^{2} \approx (f{26}/6)^{2} \approx (2\pi^{2} a^{3} ) 10 \approx \pi^{155}$$
 The corresponding value of π in the last expression shows the fractional series 3, 7, 16, -u, with u ≈
 2×137. This confirms the above hypothesis concerning the origin of the Cosmos vastness, namely
 that π is a intermediate rational calculation basis: in this case, the rational value π 0 = (355u-22)/
 (113u+7) corresponds to the above G value to 10 -8 precision.
-Since (R/\lambdabar_e ) 2 is also close to $2^{256}$ , within 1{percent}, this illustrates the following musical relation
+Since $(R/\lambdabar_e )^{2}$ is also close to $2^{256}$ , within 1\%, this illustrates the following musical relation
 involving again 137:
-2 1/155 ≈ π 1/256 ≈ (2π) 1/3×137
+$$2^{1/155} \approx \pi^{1/256} \approx (2\pi)^{1/3 \times 137}$$
 The scale with 155 notes is not known, but 137 appears also in the classical musical scales [3], in
 particular the fifth 306 notes scale (about π 5 ), in liaison with the canonical definition of the optimal
 scale e, encountered all along above, and confirmed below.
-Note that entire powers of π appears in the 2 ppm Reilly formula:a ≈ 4π 3 + π 2 +π
+Note that entire powers of π appears in the 2 ppm Reilly formula: $a \approx 4\pi^{3} + \pi^{2} + \pi$
 Recall that whole powers of π appears also in the even order Riemann series.
 
 \section {The Euler constant e confirmed as the optimal calculation basis for the Grandcosmos}
 
 The Topological Axis shows clearly that the Grandcosmos is defined by the following
 conjonction:
-f{e 2 } = exp(2 e2 + 1⁄2 ) ≈ exp(e 2e + e 2 )
-The supplementary term exp(e 2 ) is close to a 3/2 . Note that e 2 has the following musical property:
-(3/2) 5 ≈ (4/3) 7 ≈ (5/4) 9 ≈ (6/5) 11 ≈ ... ≈ (1+1/n) 2n+1
-→
-e 2
-a series converging very much rapidly than the Euler's one (1+1/n) n → e. The first two terms defines
+$$f{e 2 } = exp(2 e2 + 1⁄2 ) \approx exp(e^{2e} + e^{2} )$$
+The supplementary term exp(e 2 ) is close to a^{3/2} . Note that $e^{2}$ has the following musical property:
+$$(3/2)^{5} \approx (4/3)^{7} \approx (5/4)^{9} \approx (6/5)^{11} \approx ... \approx (1+1/n)^{2n+1} \implies e^{2}$$
+a series converging very much rapidly than the Euler's one $$(1+\frac{1}{n})^{n} \implies e$$. The first two terms defines
 the occidental 12 tones scale.
 
 \section {The electroweak constant mathematical fine tuning}
 
 The Particle standard model achieved a unification between electromagnetism and weak
-nuclear force. So we look for a relation involving a, 137, a w and the mathematical constants. One
+nuclear force. So we look for a relation involving a, 137, $a_{w}$ and the mathematical constants. One
 immediately gets:
 $$a_w ≈ (2γ137a/π)^3$$
-Now, by introducing the characteristic length l eF = (G_F /m_e c 2 ) 1/3 , this electroweak constant appears as
-a cube $a_w ≈ (\lambdabar e /l eF )^3$ , so:
-\lambdabar /l eF ≈ 2γ137a/π
+Now, by introducing the characteristic length $$l_{eF} = (G_F /m_e c 2 )^{1/3}$$ , this electroweak constant appears as
+a cube $a_{w} \approx (\frac{\lambdabar_{e}}{l_{eF}}^{3}$ , so:
+$$\frac{\lambdabar}{l_{eF}} \approx 2γ137a/\pi$$
 see below how this formulae simplifies again by using the Atiyah Constant.
 
 \section {The Muon and Tau fine tuning}
 
-Admitting the above relation, this defines F = a w1/2 = E F /m e c 2 ≈ 573007.3652, inside its 2.5 10 -7
-indetermination. Another fine-tuning ties the muon, proton and Hydrogen masses: E F /m e c 2 ≈
-m μ 2 √(m p m H )/am e3 . This corresponds to a muon mass relative to electron μ = 206.7682869, inside its
-2 × 10 -8 measurement range.
+Admitting the above relation, this defines $F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652$, inside its $2.5 10^{-7}$
+indetermination. Another fine-tuning ties the muon, proton and Hydrogen masses: $\frac{E_{F}}{m_{e}\cdot c^{2}} \approx
+m_{\mu}^{2} \sqrt{(m_{p} \cdot m_{H} )}/am_{e}^{3}$ . This corresponds to a muon mass relative to electron μ = 206.7682869, inside its
+$2 \times 10^{-8}$ measurement range.
 Now the Koide relation [22], where μ and τ are the Muon and Tau masses relative to Electron:
-(1 + μ + τ)/2 = (1 + √μ + √τ) 2 /3
+$$(1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^{2/3}$$
 has a mathematical justification in term of circulating matrix. It predicted correctly the tau/electron
 mass ratio at an epoch where its measurement was false to 3 sigmas. With the above μ value, it
-gives τ ≈ 3477.441701. This Koide relation, quite discarded by the communality, is another sign of
-the serious incompleteness of present Particle Physics standard model. This value correlate with the
-term 1+1/√a, central in quantum electrodynamics (to $10^-7$ ):
-1+1/√a ≈ τ 3 H/pD 2
+gives $$\tau \approx 3477.441701$$. This Koide relation, quite discarded by the communality, is another sign of
+the serious incompleteness of present Particle Physics standard model. This value correlates with the
+term $1+1/\sqrt{a}$, central in quantum electrodynamics (to $10^{-7}$ ):
+$$1+1/\sqrt{a} \approx \tau^{3} H/pD^{2}$$
 confirming the central role of the Moonshine Monster dimension [23] D = 196883.
 
 \section {The Intermediate Bosons mathematical fine tuning}
 
 The computer indicates, with n ≈ 1838.68366089(17) the neutron/electron mass ratio:
-W ≈ γa137 2 /3πd e
-Z ≈ ap 2 π 4 /137d e n
-With these values, the above relation R/√(\lambdabar_p \lambdabar_H ) ≈ (WZ) 4 corresponds to the above G value in the
+$$W \approx γa137 2 / 3\pi d^{e}$$
+$$Z \approx ap 2 \pi^{4} / 137 d_{e}^{n}$$
+With these values, the above relation $$R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}$$ corresponds to the above G value in the
 ppb range.
 
 \section {The Direct Gravitational Constant mathematical fine-tuning}
 
-Computer analysis shows the following ppb precise extension for the deviation between $2^127$ and
-$a_G$ ,
-$$(2^127 /a_G ) 1/2 ≈ d_e (H/p) 3 ≈ a w1/2 (a/ π ) 4 ( γ /4n)^3$$
+Computer analysis shows the following ppb precise extension for the deviation between $2^{127}$ and
+$a_{G}$ ,
+$$(2^{127} / a_{G})^{1/2} \approx d_{e} (H/p)^{3} \approx a_{w}^{1/2} (a/\pi)^{4} ( \gamma/4n)^{3}$$
 leading to:
-(aa w1/2 /πd e ) 1/3 ≈ 4πn'/ γ a
-where n' = nH/p is the principal value of the neutron mass by respect to the electron effective mass
-in the Hydrogen atom. Note that this is close (0.12 %) to the monstrous fifth term 292.6345909 in
-the fractional development of π which is itself very close to n/2π to 3.4 10 -6 . Since the fractional
+$$(aa_{w}^{1/2} /\pi d e )^{1/3} \approx 4\pi n\prime/ \gamma^{a}$$
+where $n\prime = nH/p$ is the principal value of the neutron mass by respect to the electron effective mass
+in the Hydrogen atom. Note that this is close (0.12\%) to the monstrous 5th term 292.6345909 in
+the fractional development of π which is itself very close to $n/2\pi$ to $3.4 10^{-6}$ . Since the fractional
 development of π is always a non-resolved problem, this confirms that present mathematics is
 incomplete and that Nature uses rational approximations for π.
 
 \section {The Atiyah constant}
 
 Michael Atiyah was a precursor in the search for unity of Mathematics and Physics. His last
-work in this domain introduced the constant Γ = γa/π, as a simplification term [24]. Indeed this
-constant Γ simplifies some of the above relations:
-a w = (137×2 Γ) 3
-W ≈ 137 2 Γ / 3d e
-( Γ√ a w /γd e ) 1/3 ≈ 4n'/ Γ
+work in this domain introduced the constant $$\Gamma = \gamma a/\pi$$, as a simplification term [24]. Indeed this
+constant $\Gamma$ simplifies some of the above relations:
+$$a_{w} = (137 \times 2 \Gamma)^3{$}$
+$$W \approx 137^{2} \Gamma / 3d^{e}$$
+$$( \Gamma\sqrt{a_{w}/\gamma d e )}^{1/3} \approx 4n\prime / \Gamma$$
 and the above relation giving a G shows a double form, the first one without any numerical factor:
-ap G / π √(pH) ≈ (nF/137 2 Γ 3 ) 3 ≈ (4n/ Γ ) 3 /F
+$$ap_{G} / \pi \sqrt(pH) \approx (n_{F}/137^{2} \Gamma^{3} )^{3} \approx (4n/ \Gamma )^{3} /F$$
 Now, as recalled before in the Holic Principle, the exponents represents the number of
 dimensions. So, this corresponds to a dimensional reduction, by eliminating 137, from 9D and 6D to
 3D, which could be associated to Superstring theory, where the equations are coherent only if space
-has 9 dimensions, and if the 6 supplementary dimensions are fold on very small distances [25].
+has 9 dimensions, and if the 6 supplementary dimensions unfold on very small distances [25].
 Note that:
-$$m_e c 2 f{γΓ} ≈ 125.175 GeV$$
-compatible with the Higgs Boson energy, Note that it corresponds to the dimension index k ≈ π: γΓ
-≈ 4π + 2. The length $\lambdabar_e f{Γ} ≈ 5\times 10^5$ light-years is characteristic of a galaxy group radius, and the length associated to the Milankovich climatic period. Now :
-$Γ ≈ e^π + 2$
-meaning that the special value in the Topological Axis $k = e π /4 ≈ 4/ln2$ corresponds to about n = Γ .
+$$m_{e} c^{2} f{\gamma\Gamma} \approx 125.175 GeV$$
+compatible with the Higgs Boson energy, Note that it corresponds to the dimension index $k \approx \pi: \gamma\Gamma
+\approx 4\pi + 2$. The length $\lambdabar_{e} f{\Gamma} \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group radius, and the length associated to the Milankovich climatic period. Now :
+$\Gamma \approx e^\pi + 2$
+meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to about n = Γ .
 The following double correlation is specially suggestive (2.2 and 0.3 ppm):
-$$a ≈ 4π 3 + π 2 +π ≈ ln(R/\lambdabar_e ) + Γ + e π$$
-the first one is due to Reilly, and the second one confirms the R value. Moreover (0.013%, 0.046%):
-$a – e π ≈ e π lna ≈ j = 8π 2 /ln2 ≈ θ mam /θ CMB$
+$$a \approx 4\pi^{3} + \pi^{2} + \pi \approx ln(R/\lambdabar_{e} ) + \Gamma + e^{\pi}$$
+the first one is due to Reilly, and the second one confirms the R value. Moreover (0.013\%, 0.046\%):
+$a - e^{\pi} \approx e^{\pi} lna \approx j = 8\pi^{2} /ln2 \approx \Theta_{mam} /\Theta_{CMB}$
 where j is the Sternheimer scale factor, central in Theoretical Biology [3], being, in particular the
 Temperature ratio Mammal/CMB.
