--- a/tauthesis.sty
+++ b/tauthesis.sty
@@ -407,7 +407,7 @@
 \def\Faculty#1{\gdef\@Faculty{#1}}
 \def\Department#1{\gdef\@Department{#1}} 
 \def\Degreetext#1{\gdef\@Degreetext{#1}} 
-  \Degreetext{A thesis submitted toward the degree of\\%
+  \Degreetext{Article submitted for the publication of\\%
     \@Degree}
     
 \def\Header#1{\gdef\@Header{#1}} 
@@ -418,7 +418,7 @@
 \def\SupervisionText#1{\gdef\@SupervisionText{#1}}   
   \SupervisionText {{\small This research was carried out at \@University\\
       in the \@Department\\
-      Faculty of Engineering\\
+      Faculty of \\
       under the supervision of \@Supervisor\\
       and \@SecondSupervisor\\}}
     
