--- a/chapter2.tex
+++ b/chapter2.tex
@@ -33,7 +33,7 @@ Eddington's Theory was rejected as soon as a appeared to be different from 137. 
 following shows that 137 plays a central role in fine-tuning analysis. One may interpret 137 + 1 as
 the sum of the numbers of dimensions in the Topological Axis [3], taking into account the double
 point for the superstring value n = 10, and the remarkable sum:
-$$\sum{k=7}{k=0}(2 + 4 k ) = 2^{7}$$
+$$\sum_{k=7}^{k=0}(2 + 4 k ) = 2^{7}$$
 So $137 = 2^{7} - 1 + 3 + 7$, the Hierarchic Combination form. But this appears also as 137 = 135 + 2,
 with the dimension 2 of the String patent. In particular, one obtains the value $a \approx 137.035999119$
 compatible with measurement $a \approx 137.035999139(31)$ in:
@@ -74,7 +74,7 @@ relations would be only Fourier transform manifestations of Wave Mechanics.
 
 \section {Omnipresence of $a^{a}$}
 
-The famous Lucas-Lehmer primality test uses the series of whole numbers $N_{n+1} = N_{n}^{2} - 2$,
+The famous Lucas-Lehmer primality test uses the series of whole numbers $N_{n+1} = N_{n}^{2}-2$,
 starting from $N = 4 = u_{3} + 1/u_{3}$ , with $u_{3} = \sqrt{3} + 2$, belonging to the Diophantine generators $u_{n} = \sqrt{n} + \sqrt{(n+1)}$., whose entire powers are close to whole numbers. One shows that $N_{n} \approx u_{3}^{(2^{q})}$, and for q = 9:
 $u_{3}^(2^9) \approx (2(a2 + 2sqrt{\mu}))^{64} \approx a^{a}$
 defining a to 39 ppm, where μ is the mass ratio muon/electron and the main term $2a^{2} = m_{e} c^{2}/E_{Ryd}$ is
@@ -83,7 +83,7 @@ related to the Monster group cardinal order, to 1.5 ppm:
 $$O_{M} e^{-1/2a} \approx (E_{P} /E_{Ryd})^{2} = \frac{\hbar Gc^{5}}{E_{Ryd}^2}$$
 Indeed, by respect to the Chronon $\lambdabar_M /c \approx t_{\Theta} = 1.1333 \times 10{-104} s$, the number ot quantum events in
 the above Supercycle period $T/ t_{\Theta}$ shows, with $\delta = R\prime/R$, to 0.4\%, 2\% and 0.6\%:
-$$\delta \times T/t_{\Theta} \approx (e^{e} )^{137} \approx O_{M}^{3} \approx 496^{60}$$
+$$\delta \times T/t_{\Theta} \approx (e^{e})^{137} \approx O_{M}^{3} \approx 496^{60}$$
 implying a liaison between $O_{M}$ , 137 and the famous String dimension 496, tied to the Higgs Boson
 (see Fig.1). Note the following combination of the three dimensionless parameters, the electrical
 one a, the Fermi ratio $F =\sqrt{a_{w}}$ and the Bizouard strong ratio $f \approx 8.4345$:
@@ -91,7 +91,7 @@ $$F/af \approx 496$$
 Also, to 8 ppm: $lnO_{M} /2lnlnlnlnO_{M} \approx 137$, and the product of the 20 groups of the happy family tied
 to the Monster shows, to 0.015\%:
 $\Pi_{happy} \approx \delta \times a^{a}$. Also, with the Pell-Fermat generator $u_{1} = 1 + \sqrt{2}$:
-$a^{a} \approx u 1^(3\times(2^{8} - 1))$
+$a^{a} \approx u 1^(3\times(2^{8}-1))$
 defining a to 0.3 ppm. So the number a a establishes a connexion between $u_{1}$ and $u_{3}$ , two of the
 simplest arithmetics generators. Moreover a a has been connected [3] to the canonical $e^{1/e}$ and the
 5th optimal musical scale with 306 notes. This opens a new research in pure mathematics.
